--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
-/* Font family setup */
-@import url("https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap");
+/* Primary */
 :root {
+  /* Typography */
+  --ff-barlow: "Barlow", sans-serif;
+  --ff-fraunces: "Fraunces", serif;
+  --font-size: 18px;
+  /* Color */
   /* Primary */
   --soft-red: hsl(7, 99%, 70%);
   --yellow: hsl(51, 100%, 49%);
@@ -15,14 +19,99 @@
   --dark-grayish-blue: hsl(232, 10%, 55%);
   --grayish-blue: hsl(210, 4%, 67%);
   --white: hsl(0, 0%, 100%);
+}
+body {
+  font-size: var(--font-size);
+}
+.nav-logo {
+  font-family: var(--ff-barlow) !important;
+  font-weight: 600 !important;
+  font-size: 2em;
+}
+.main-bg {
+  background: url("/assets/images/desktop/image-header.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100vh;
+}
+.main-text {
+  font-family: var(--ff-fraunces);
+  font-size: 3em;
+  text-transform: uppercase;
+  color: var(--white);
+  margin-top: 170px;
+  letter-spacing: 10px;
+}
+.mb-6 {
+  margin-bottom: 60px;
+}
+.nav-bg {
+  background-color: #3ebfff;
+}
 
-  /* Typography */
-  --ff-barlow: font-family: 'Barlow', sans-serif;
-  --ff-fraunces: font-family: 'Fraunces', serif;
-  --font-size: 18px;
+.white-text {
+  color: var(--white) !important;
 }
-body{
-    font-size: var(--font-size);
+.nav-btn {
+  background-color: var(--white);
+  color: var(--very-dark-desaturated-blue);
 }
-.main-bg{
+.font-fraunces {
+  font-family: var(--ff-fraunces);
+}
+.font-barlow {
+  font-family: var(--ff-barlow);
+}
+.color-dark-grayish-blue {
+  color: var(--dark-grayish-blue);
+}
+.yellow {
+  display: none;
+}
+.px-10 {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+.learn-more {
+  position: relative;
+}
+.learn-more::after {
+  content: "";
+  position: absolute;
+  top: 16px;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 5px;
+  transition: 0.5s;
+  left: 0px;
+}
+.transform::after {
+  content: "";
+  background-color: rgba(250, 212, 0, 0.4);
+}
+.transform:hover::after {
+  content: "";
+  background-color: var(--yellow);
+}
+.stand-out::after {
+  content: "";
+  background-color: rgb(254, 120, 103, 0.4);
+}
+.stand-out:hover::after {
+  content: "";
+  background-color: var(--soft-red);
+}
+
+@media screen and (max-width: 376px) {
+  .main-text {
+    font-size: 2.5em;
+  }
+  .white {
+    display: none;
+  }
+  .yellow {
+    display: block;
+  }
 }
