--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,16 +20,53 @@
   --grayish-blue: hsl(210, 4%, 67%);
   --white: hsl(0, 0%, 100%);
 }
+/* Body styling */
 body {
   font-size: var(--font-size);
 }
-.nav-logo {
-  font-family: var(--ff-barlow) !important;
-  font-weight: 600 !important;
-  font-size: 2em;
+/* Just a small version styling */
+.white-text {
+  color: var(--white) !important;
 }
+.mb-6 {
+  margin-bottom: 60px;
+}
+.font-fraunces {
+  font-family: var(--ff-fraunces);
+}
+.font-barlow {
+  font-family: var(--ff-barlow);
+}
+.color-dark-grayish-blue {
+  color: var(--dark-grayish-blue);
+}
+.font-size-18 {
+  font-size: var(--font-size);
+}
+.grayish-blue {
+  color: var(--grayish-blue);
+}
+.very-dark-grayish-blue {
+  color: var(--very-dark-grayish-blue);
+}
+.fw-700 {
+  font-weight: 700;
+}
+.fw-900 {
+  font-weight: 900;
+}
+.dark-moderate-cyan {
+  color: var(--dark-moderate-cyan);
+}
+footer {
+  background-color: #91d4c6;
+}
+.svg-footer {
+  color: var(--dark-moderate-cyan);
+}
+/* Section 1 styling */
 .main-bg {
-  background: url("/assets/images/desktop/image-header.jpg");
+  background: url("../images/desktop/image-header.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -43,49 +80,34 @@ body {
   margin-top: 170px;
   letter-spacing: 10px;
 }
-.mb-6 {
-  margin-bottom: 60px;
-}
 .nav-bg {
   background-color: #3ebfff;
 }
-
-.white-text {
-  color: var(--white) !important;
-}
 .nav-btn {
-  background-color: var(--white);
-  color: var(--very-dark-desaturated-blue);
+  background-color: var(--white) !important;
+  color: var(--very-dark-desaturated-blue) !important;
 }
-.font-fraunces {
-  font-family: var(--ff-fraunces);
+.nav-btn:hover {
+  background-color: rgb(255, 255, 255, 0.4) !important;
+  color: var(--white) !important;
+  border: none;
 }
-.font-barlow {
-  font-family: var(--ff-barlow);
-}
-.color-dark-grayish-blue {
-  color: var(--dark-grayish-blue);
-}
-.yellow {
-  display: none;
-}
-.px-10 {
-  padding-left: 100px;
-  padding-right: 100px;
-}
+/* Section 2 */
 .learn-more {
   position: relative;
+  z-index: 1;
 }
 .learn-more::after {
   content: "";
   position: absolute;
-  top: 16px;
+  top: 12px;
   display: block;
   width: 100%;
-  height: 4px;
+  height: 8px;
   border-radius: 5px;
   transition: 0.5s;
   left: 0px;
+  z-index: -1;
 }
 .transform::after {
   content: "";
@@ -103,15 +125,34 @@ body {
   content: "";
   background-color: var(--soft-red);
 }
-
+/* Section 3 */
+.bg-graphic-design {
+  background: url("../images/desktop/image-graphic-design.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 650px;
+}
+.bg-photography {
+  background: url("../images/desktop/image-photography.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 650px;
+}
+.graphic-design-text {
+  color: var(--dark-desaturated-cyan);
+}
+.photography-text {
+  color: var(--dark-blue);
+}
+/* Media query... less than 375px? just use this! */
 @media screen and (max-width: 376px) {
   .main-text {
     font-size: 2.5em;
   }
-  .white {
-    display: none;
-  }
-  .yellow {
-    display: block;
-  }
+}
+.nav-btn {
+  background-color: var(--yellow) !important;
+  border: none !important;
 }
